add detail.html link

--- a/jQuery购物网站/index.html
+++ b/jQuery购物网站/index.html
@@ -15,6 +15,7 @@
 				<div class="search">
 					<input type="text" name="" id="inputSearch" value="请输入商品名称" />
 				</div>
+				<p>请点击：<a href="detail.html" id="detail">商品详情页</a></p>
 				<ul id="skin">
 					<li id="skin_0" title="蓝色" class="selected">蓝色</li>
 					<li id="skin_1" title="紫色">紫色</li>
